--- a/contar123c.css
+++ b/contar123c.css
@@ -113,23 +113,17 @@ h1 {
 }
 
 /* Nuevo código para redimensionar imágenes en dispositivos móviles */
-.container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-}
-
-.container img {
-  margin: 5px;
-}
 
 @media (max-width: 768px) {
-  .container {
-    max-width: 100%; /* Ancho completo en dispositivos móviles */
+  .container,
+  .container2 {
+    max-width: 95%; /* Ancho completo en dispositivos móviles */
   }
 
-  container img {
-    width: calc(30% - 10px); /* Ajusta el valor según tus necesidades */
+  .guess-button {
+    width: 50px;
+    height: 50px;
+    font-size: 25px;
+    margin-bottom: 10px;
   }
 }
