--- a/contar123c.css
+++ b/contar123c.css
@@ -7,22 +7,22 @@
 }
 
 body {
-  max-height: 80%;
   text-align: center;
   color: #0c4fe1;
+  height: 100%; 
 }
 
 h1 {
-  color: rgb(10, 10, 10);
+  color: #EABE3F;
   padding: 50px;
   font-size: 40px;
 }
 
 .container {
-  background-color: #ddff62;
+  background-color: none;
   max-width: 80%;
   margin: auto;
-  border: 3px solid #000;
+  border: 3px solid #EABE3F;
   border-radius: 20px;
   display: flex;
   flex-direction: column;
@@ -34,10 +34,10 @@ h1 {
 }
 
 .container2 {
-  background-color: #f0f3e9;
+  background-color: none;
   max-width: 80%;
   margin: auto;
-  border: 3px solid #000;
+  border: 3px solid #EABE3F;
   border-radius: 20px;
   display: flex;
   flex-direction: column;
@@ -49,10 +49,24 @@ h1 {
 }
 
 .textosuperior {
-  font-size: 30px;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 20px;
   justify-content: center;
   align-items: center;
+  color:black;
+  padding-right: 0.5em;
+  padding-left: 0.5em;
 }
+.pregunta {
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 35px;
+  justify-content: center;
+  align-items: center;
+  padding-right: 0.5em;
+  padding-left: 0.5em;
+}
+
+
 
 .msj {
   font-size: 30px;
@@ -63,6 +77,7 @@ h1 {
   margin-top: 10px;
 }
 
+
 .guess-button {
   width: 100px;
   height: 100px;
@@ -71,7 +86,7 @@ h1 {
   margin-bottom: 20px;
   border-radius: 50%;
   cursor: pointer;
-  background-color: #000;
+  background-color: #4285f4;
   color: white;
   display: inline-flex;
   flex-wrap: nowrap;
@@ -81,10 +96,10 @@ h1 {
 
 #play-again-button {
   background-color: #4285f4;
+  border: 2px solid #000;
   color: #fff;
   padding: 10px 20px;
   font-size: 16px;
-  border: none;
   border-radius: 5px;
   cursor: pointer;
   margin-top: 20px;
@@ -114,16 +129,32 @@ h1 {
 
 /* Nuevo código para redimensionar imágenes en dispositivos móviles */
 
+/* Visión en dispositivos móviles */
 @media (max-width: 768px) {
-  .container,
-  .container2 {
-    max-width: 90%; /* Ancho completo en dispositivos móviles */
+  .container, .container2 {
+    max-width: 80%; /* Ancho completo en dispositivos móviles */
+    flex-wrap: wrap; /* Permitir envolver las imágenes en múltiples líneas */
+  }
+
+  .container .game-image {
+    flex-basis: 25%; /* Ajustar según las necesidades */
+    max-width: 25%; /* Ajustar según las necesidades */
+    margin: 1%; /* Espacio entre las imágenes */
+  }
+
+  .container .game-image:only-child {
+    flex-basis: 60%; /* Ajustar el tamaño de la única imagen */
+    max-width: 60%; /* Ajustar el tamaño de la única imagen */
   }
 
   .guess-button {
-    width: 50px;
-    height: 50px;
-    font-size: 25px;
-    margin-bottom: 10px;
+      width: 50px;
+      height: 50px;
+      font-size: 25px;
+      margin-bottom: 10px;
+  }
+
+  .pregunta {
+      font-size: 30px;
   }
 }
